"""
QQBotå¾®æœåŠ¡ä¸»é€»è¾‘
"""
import asyncio
import socket
import sys
import os
from pathlib import Path
from typing import Optional
from dataclasses import asdict
from loguru import logger

import sys
sys.path.insert(0, str(Path(__file__).parent.parent.parent))

from src.common.config import ConfigManager
from src.common.consul import ConsulClient
from src.qqbot.sender import QQBotSender, HealthCheckResult
from src.qqbot.server import create_server


class QQBotMicroservice:
    def __init__(self, config_path: Path):
        self.config_path = config_path
        self.config: Optional[ConfigManager] = None
        self.consul_client: Optional[ConsulClient] = None
        self.sender: Optional[QQBotSender] = None
        self.grpc_server = None
        self._shutting_down = False
        self._tasks = []

    async def start(self) -> bool:
        try:
            logger.info("ğŸš€ å¯åŠ¨ QQBot å¾®æœåŠ¡...")

            # åŠ è½½é…ç½®
            self.config = ConfigManager()
            if not await self.config.load(self.config_path):
                logger.error("âŒ é…ç½®åŠ è½½å¤±è´¥")
                return False

            cfg = self.config.get()

            # è®¾ç½®æ—¥å¿—
            await self._setup_logging(cfg.log)

            # æ‰“å°é…ç½®
            await self._print_config(cfg)

            # åˆå§‹åŒ–QQBotå‘é€å™¨
            logger.info("ğŸ¤– åˆå§‹åŒ–QQBotå‘é€å™¨...")
            self.sender = QQBotSender()

            # è¿æ¥åˆ°QQBot
            if not await self.sender.connect():
                logger.error("âŒ QQBotè¿æ¥å¤±è´¥")
                return False

            # è§£æç›‘å¬åœ°å€
            host, port_str = cfg.server.listen_on.split(":")
            port = int(port_str)

            if host in ["0.0.0.0", "127.0.0.1", "[::]", "[::1]"]:
                host = socket.gethostbyname(socket.gethostname())

            # Consulæ³¨å†Œ
            if cfg.consul.host:
                logger.info(f"ğŸ”— è¿æ¥åˆ° Consul: {cfg.consul.host}")

                # å‡†å¤‡KVæ•°æ®ï¼ˆæ¥å£å®šä¹‰ï¼‰
                server_data = {
                    "fields": {
                        "target_id": {
                            "type": "str",
                            "description": "ç›®æ ‡IDï¼ˆQQå·æˆ–ç¾¤å·ï¼‰",
                            "required": True
                        },
                        "target_type": {
                            "type": "enum",
                            "description": "ç›®æ ‡ç±»å‹ï¼šuserï¼ˆç§èŠï¼‰æˆ– groupï¼ˆç¾¤èŠï¼‰",
                            "required": True,
                            "enum": ["user", "group"]
                        },
                        "content": {
                            "type": "dict",
                            "description": "æ¶ˆæ¯å†…å®¹ï¼Œæ”¯æŒå¤šç§æ ¼å¼",
                            "required": True
                        },
                        "metadata": {
                            "type": "dict",
                            "description": "é™„åŠ å…ƒæ•°æ®",
                            "required": False
                        },
                        "sender_id": {
                            "type": "str",
                            "description": "å‘é€è€…æ ‡è¯†",
                            "required": False
                        }
                    }
                }

                # å‡†å¤‡å…ƒæ•°æ®
                meta = {
                    "version": "1.0.0",
                    "host": socket.gethostname(),
                    "pid": str(os.getpid()),
                    "qq_bot": "ncatbot",
                    "features": "private_message,group_message,rich_message"
                }

                # åˆ›å»ºConsulå®¢æˆ·ç«¯
                self.consul_client = ConsulClient(
                    host=cfg.consul.host,
                    token=cfg.consul.token,
                    scheme=cfg.consul.scheme
                )

                # æ³¨å†ŒæœåŠ¡
                if await self.consul_client.register_service(
                    service_name=cfg.server.name,
                    address=host,
                    port=port,
                    service_desc="åŸºäºncatbotçš„QQæœºå™¨äººæ¶ˆæ¯å‘é€å¾®æœåŠ¡",
                    server_data=server_data,
                    meta=meta
                ):
                    logger.info("âœ… Consul æ³¨å†ŒæˆåŠŸ")
                else:
                    logger.warning("âš ï¸ Consul æ³¨å†Œå¤±è´¥ï¼ŒæœåŠ¡ç»§ç»­è¿è¡Œ")

            # åˆ›å»ºgRPCæœåŠ¡å™¨
            logger.info("ğŸŒ åˆ›å»º gRPC æœåŠ¡å™¨...")
            self.grpc_server = create_server(
                sender=self.sender,
                max_workers=cfg.server.max_workers
            )

            # æ·»åŠ ç›‘å¬ç«¯å£
            self.grpc_server.add_insecure_port(cfg.server.listen_on)
            await self.grpc_server.start()

            logger.info(f"âœ… gRPC æœåŠ¡å™¨å¯åŠ¨åœ¨ {cfg.server.listen_on}")
            logger.info(f"ğŸ¤– æœåŠ¡åç§°: {cfg.server.name}")

            # è·å–QQBotä¿¡æ¯
            try:
                health_info = await self.sender.health_check()
                if health_info.healthy:
                    logger.info(f"ğŸ‘¤ QQè´¦å·: {health_info.user_id}")
                    logger.info(f"ğŸ·ï¸  æ˜µç§°: {health_info.nickname}")
            except Exception as e:
                logger.warning(f"âš ï¸ è·å–QQBotä¿¡æ¯å¤±è´¥: {e}")

            # å¯åŠ¨å¥åº·æ£€æŸ¥ä»»åŠ¡
            self._tasks.append(
                asyncio.create_task(self._health_check_task())
            )

            logger.info("ğŸ‰ QQBot å¾®æœåŠ¡å¯åŠ¨å®Œæˆï¼")
            return True

        except Exception as e:
            logger.error(f"âŒ æœåŠ¡å¯åŠ¨å¤±è´¥: {e}")
            import traceback
            logger.error(f"è¯¦ç»†é”™è¯¯: {traceback.format_exc()}")
            return False

    async def _health_check_task(self):
        """å¥åº·æ£€æŸ¥ä»»åŠ¡"""
        check_count = 0
        max_failures = 3

        try:
            while not self._shutting_down:
                await asyncio.sleep(30)
                check_count += 1

                if self.sender:
                    try:
                        health_info = await self.sender.health_check()

                        if not health_info.healthy:
                            logger.warning(f"âš ï¸ å¥åº·æ£€æŸ¥: QQBotè¿æ¥å¼‚å¸¸ - {health_info.message}")

                            # å¦‚æœæ˜¯ç¬¬3æ¬¡è¿ç»­å¤±è´¥ï¼Œå°è¯•é‡æ–°è¿æ¥
                            if check_count % 3 == 0:
                                logger.info("ğŸ”„ å°è¯•é‡æ–°è¿æ¥QQBot...")
                                if hasattr(self.sender, '_connected'):
                                    self.sender._connected = False
                                await self.sender.connect()
                                check_count = 0
                        else:
                            check_count = 0
                            if check_count % 5 == 0:
                                logger.debug(f"ğŸ“Š QQBotçŠ¶æ€æ­£å¸¸: {health_info.message}")

                    except Exception as e:
                        logger.error(f"å¥åº·æ£€æŸ¥å¼‚å¸¸: {e}")
                        check_count += 1

                        if check_count >= max_failures:
                            logger.warning("ğŸ”„ å¥åº·æ£€æŸ¥å¤šæ¬¡å¤±è´¥ï¼Œå°è¯•é‡ç½®è¿æ¥...")
                            if hasattr(self.sender, '_connected'):
                                self.sender._connected = False
                            check_count = 0

        except asyncio.CancelledError:
            logger.debug("å¥åº·æ£€æŸ¥ä»»åŠ¡è¢«å–æ¶ˆ")
        except Exception as e:
            logger.error(f"å¥åº·æ£€æŸ¥ä»»åŠ¡å¼‚å¸¸: {e}")

    async def run(self):
        """è¿è¡ŒæœåŠ¡"""
        try:
            await self.grpc_server.wait_for_termination()

        except asyncio.CancelledError:
            logger.info("æœåŠ¡ä»»åŠ¡è¢«å–æ¶ˆ")
        except Exception as e:
            logger.error(f"gRPCæœåŠ¡å™¨å¼‚å¸¸: {e}")

    async def stop(self):
        """åœæ­¢æœåŠ¡ - ä¿è¯ä¼˜é›…å…³é—­å’Œæ¸…ç†"""
        if self._shutting_down:
            return

        self._shutting_down = True
        logger.info("ğŸ›‘ åœæ­¢ QQBot å¾®æœåŠ¡...")

        # 1. å–æ¶ˆæ‰€æœ‰åå°ä»»åŠ¡
        for task in self._tasks:
            if not task.done():
                task.cancel()

        # 2. ç­‰å¾…ä»»åŠ¡ç»“æŸï¼ˆæœ‰è¶…æ—¶ï¼‰
        if self._tasks:
            try:
                logger.info("â³ ç­‰å¾…ä»»åŠ¡åœæ­¢...")
                await asyncio.wait_for(
                    asyncio.gather(*self._tasks, return_exceptions=True),
                    timeout=3.0
                )
                logger.info("âœ… æ‰€æœ‰ä»»åŠ¡å·²åœæ­¢")
            except asyncio.TimeoutError:
                logger.warning("â° ç­‰å¾…ä»»åŠ¡åœæ­¢è¶…æ—¶ï¼Œå¼ºåˆ¶ç»§ç»­")
            except Exception as e:
                logger.warning(f"åœæ­¢ä»»åŠ¡æ—¶å¼‚å¸¸: {e}")

        # 3. Consulæ³¨é”€ï¼ˆæœ€é‡è¦çš„ä¸€æ­¥ï¼‰
        consul_success = False
        if self.consul_client:
            try:
                logger.info("ğŸ—‘ï¸  å¼€å§‹Consulæ³¨é”€æµç¨‹...")

                # ç»™Consulæ³¨é”€è¶³å¤Ÿçš„æ—¶é—´ï¼Œç¡®ä¿èƒ½å®Œæˆæ£€æŸ¥å’Œæ¸…ç†
                consul_task = asyncio.create_task(
                    self.consul_client.deregister_service()
                )

                try:
                    consul_success = await asyncio.wait_for(consul_task, timeout=10.0)
                    if consul_success:
                        logger.info("âœ… Consulæ³¨é”€æˆåŠŸ")
                    else:
                        logger.error("âŒ Consulæ³¨é”€å¤±è´¥")
                except asyncio.TimeoutError:
                    logger.error("â° Consulæ³¨é”€è¶…æ—¶")
                    consul_task.cancel()
                except Exception as e:
                    logger.error(f"âŒ Consulæ³¨é”€å¼‚å¸¸: {e}")
            except Exception as e:
                logger.error(f"ğŸ’¥ Consulæ³¨é”€è¿‡ç¨‹å¼‚å¸¸: {e}")
        else:
            logger.info("â„¹ï¸ æ— Consulå®¢æˆ·ç«¯ï¼Œè·³è¿‡æ³¨é”€")

        # 4. åœæ­¢gRPCæœåŠ¡å™¨ï¼ˆåœ¨Consulæ³¨é”€ä¹‹åï¼‰
        if self.grpc_server:
            try:
                logger.info("ğŸ›‘ åœæ­¢gRPCæœåŠ¡å™¨...")
                await self.grpc_server.stop(grace=3.0)
                logger.info("âœ… gRPCæœåŠ¡å™¨å·²åœæ­¢")
            except Exception as e:
                logger.error(f"âŒ åœæ­¢gRPCæœåŠ¡å™¨å¤±è´¥: {e}")

        # 5. æ–­å¼€QQBotè¿æ¥ï¼ˆæœ€åä¸€æ­¥ï¼‰
        if self.sender:
            try:
                logger.info("ğŸ”Œ æ–­å¼€QQBotè¿æ¥...")
                await self.sender.disconnect()
                logger.info("âœ… QQBotè¿æ¥å·²æ–­å¼€")
            except Exception as e:
                logger.error(f"âŒ æ–­å¼€QQBotè¿æ¥å¤±è´¥: {e}")

        logger.info(f"ğŸ‘‹ QQBotå¾®æœåŠ¡å·²åœæ­¢ (Consul: {'å·²æ¸…ç†' if consul_success else 'å¯èƒ½æœªæ¸…ç†'})")

    async def _setup_logging(self, log_config):
        """è®¾ç½®æ—¥å¿—"""
        import sys

        logger.remove()

        if log_config.mode in ["console", "both"]:
            logger.add(
                sys.stdout,
                format="<green>{time:YYYY-MM-DD HH:mm:ss}</green> | "
                       "<level>{level: <8}</level> | "
                       "<cyan>{name}</cyan>:<cyan>{function}</cyan>:<cyan>{line}</cyan> - "
                       "<level>{message}</level>",
                level=log_config.level.upper(),
                colorize=True
            )

        if log_config.mode in ["file", "both"] and log_config.file_path:
            log_file = Path(log_config.file_path)
            log_file.parent.mkdir(parents=True, exist_ok=True)

            logger.add(
                str(log_file),
                format="{time:YYYY-MM-DD HH:mm:ss} | {level: <8} | "
                       "{name}:{function}:{line} - {message}",
                level=log_config.level.upper(),
                rotation="1 day",
                retention="7 days",
                encoding=log_config.encoding
            )

    async def _print_config(self, cfg):
        """æ‰“å°é…ç½®"""
        logger.info("=" * 50)
        logger.info("ğŸ“‹ æœåŠ¡é…ç½®:")
        logger.info(f"   æœåŠ¡åç§°: {cfg.server.name}")
        logger.info(f"   ç›‘å¬åœ°å€: {cfg.server.listen_on}")
        logger.info(f"   è¿è¡Œæ¨¡å¼: {cfg.server.mode}")
        logger.info(f"   æœ€å¤§å·¥ä½œçº¿ç¨‹: {cfg.server.max_workers}")

        if cfg.consul.host:
            logger.info(f"   Consul åœ°å€: {cfg.consul.host}")

        logger.info(f"   æ—¥å¿—çº§åˆ«: {cfg.log.level}")
        logger.info("=" * 50)
